--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,16 @@ stages:
 
 variables:
   project: "car-catalog"
+  project_file: "CarCatalog.csproj"
 
 before_script:
+  - "dir"
   - "dotnet restore"
 
 build:
   stage: build
   variables:
-    build_path: "$project/src/$project"
+    build_path: "$project/src/$project_file"
   script:
     - "cd $build_path"
     - "dotnet build"
