--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,31 @@
 image: docker:latest
 
-variables:
-  DOCKER_DRIVER: overlay
-  CONTAINER_TEST_IMAGE: nikaburu/car-catalog:$CI_BUILD_REF_NAME
-
 services:
 - docker:dind
 
+variables:
+  DOCKER_DRIVER: overlay
+  CONTAINER_TEST_IMAGE: registry.gitlab.com/nikaburu/car-catalog:$CI_BUILD_REF_NAME  
+  CONTAINER_RELEASE_IMAGE: registry.gitlab.com/nikaburu/car-catalog:latest
+
 stages:
 - build
+- release
+
+before_script:
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
 
 build:
   stage: build
   script:
   - docker build -t $CONTAINER_TEST_IMAGE .
+  - docker push $CONTAINER_TEST_IMAGE
+
+release-image:
+  stage: release
+  script:
+    - docker pull $CONTAINER_TEST_IMAGE
+    - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
+    - docker push $CONTAINER_RELEASE_IMAGE
+  only:
+    - master
